--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ section:before {
     font-size: 64px;
 }
 
+.home img {
+    width: 100%;
+}
+
 .home .arrow img {
     width: 60px;
 }
@@ -139,6 +143,18 @@ section:before {
 
 .form-label {
     font-weight: 700;
+}
+
+@media only screen and (max-width: 728px) {
+    .home img {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .section::before {
+        left: -10px;
+    }
 }
 
 @keyframes upDown {
