--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ section:before {
 @media only screen and (max-width: 576px) {
     .section::before {
         left: -10px;
+        font-size: 64px;
     }
 }
 
